Geometry Nodes: Viewer node inside simulation zone not evaluating correctly when group output is disconnected #116820

Closed
opened 2024-01-05 16:38:19 +01:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-04 20:42, hash: 709dcc50cf3f
Worked: (newest version of Blender that worked as expected)

Short description of error
When the simulation is not connected to the group output a viewer node inside of the simulation zone does not evaluate properly.

Exact steps for others to reproduce the error
See file:
viewer_node_sim_eval.blend

**System Information** Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-04 20:42, hash: `709dcc50cf3f` Worked: (newest version of Blender that worked as expected) **Short description of error** When the simulation is not connected to the group output a viewer node inside of the simulation zone does not evaluate properly. <video src="/attachments/e7a93d30-451a-4b7c-8a37-1ee58ac5e050" title="bug-viewer_node_sim_eval-2024-01-05_16.34.58.mp4" controls></video> **Exact steps for others to reproduce the error** See file: [viewer_node_sim_eval.blend](/attachments/ffbaeadf-d5fa-4d21-ba7b-19dc8253d0c2)
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-05 16:38:20 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2024-01-05 17:01:55 +01:00

What about frame index of viewer to view?

What about frame index of viewer to view?
Author
Member

Well, there is always a current frame. I don't think there is anything wrong with the current behavior when the group output is connected. But it shouldn't be different when it isn't. The current issue leads to strange behavior (due to copy on write, think) and looks like a bug to me.

Well, there is always a current frame. I don't think there is anything wrong with the current behavior when the group output is connected. But it shouldn't be different when it isn't. The current issue leads to strange behavior (due to copy on write, think) and looks like a bug to me.

I see, it seems issues in the code of simulation baking, witch is not handle viewer as correct reason to bakes.

I see, it seems issues in the code of simulation baking, witch is not handle viewer as correct reason to bakes.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-27 20:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116820
No description provided.